--- a/.gitconfig
+++ b/.gitconfig
@@ -9,13 +9,16 @@
 [alias]
     # http://haacked.com/archive/2014/07/28/github-flow-aliases/
 	cd = checkout
+	cdd = checkout develop
+	cdm = checkout master
 	ec = config --global -e
 	up = !git pull --rebase --prune $@ && git submodule update --init --recursive
 	cob = checkout -b
 	cm = !git add -A && git commit -m
 	save = !git add -A && git commit -m 'SAVEPOINT'
-	wip = !git add -u && git commit -m "WIP" 
-	undo = reset HEAD~1 --mixed
+	wip = !git add -u && git commit -m "WIP"
+	undo = reset --hard origin
+	undom = reset --hard origin/master
 	amend = commit -a --amend
 	wipe = !git add -A && git commit -qm 'WIPE SAVEPOINT' && git reset HEAD~1 --hard
 	bclean = "!f() { git branch --merged ${1-master} | grep -v " ${1-master}$" | xargs -r git branch -d; }; f"
@@ -41,17 +44,19 @@
 	cdm = checkout master
 	del = branch -d
 	delete = branch -d
+	rm = branch -d
 	del-server = !git push origin --delete $@
 	ls = branch
 	ls-tag = describe --tags
+	lsr = branch --remote
+	lst = describe --tags
+	lsrt = ls-remote --tags
 	prune = fetch --prune
 	p = pull
 	f = fetch
 	fp = !git fetch && git pull
-	undo = reset --hard origin/develop
-
 	feature = !git checkout -b $@ && git branch --set-upstream-to=origin/feature/$@ feature/$@
-
+# https://github.com/nvie/gitflow/wiki/Command-Line-Arguments
 	feature-start = !git flow feature start -F $@ && git flow feature publish
 	feature-end = flow feature finish -FDS
 	feature-end-keep = flow feature finish -Frk
@@ -84,6 +89,5 @@
   tool = wstorm
 [mergetool.wstorm]
   cmd = /usr/local/bin/wstorm merge "$LOCAL" "$REMOTE" "$BASE" "$MERGED"
-
-
-
+[push]
+	followTags = true
